chore: use props for LongStrip

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import LongStrip from "../components/LongStrip.astro"
   <div id="swup" class="container height-fix text-black">
 		<div class="height-fix-inner flex">
 			<div class="w-1/12 sm:w-[2rem] sm:flex-none bg-black">
-				<LongStrip />
+				<LongStrip amount={5} />
 			</div>
 
 			<div class="w-11/12 sm:flex-1 flex flex-col justify-between overflow-hidden">
