--- a/src/components/LongStrip.astro
+++ b/src/components/LongStrip.astro
@@ -1,10 +1,11 @@
 ---
+const { amount } = Astro.props
 ---
 
 <div class="long-strip bg-black text-white overflow-hidden flex flex-col items-center justify-center">
   <div class="long-strip-ticker">
     {
-      [...Array(5)].map((i) => (
+      [...Array(amount)].map((i) => (
         <div class="afw inline-block uppercase font-semibold mb-2">
           <span class="inline-block mb-2">💼</span> Available for work
         </div>
