--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,6 +35,7 @@ import LongStrip from "../components/LongStrip.astro"
     background: linear-gradient(0deg, #56ff00, #fffbeb 200px);
 		width: 100%;
 		height: 100%;
+		overflow: hidden;
   }
 	.height-fix {
 		position: fixed;
