--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import LongStrip from "../components/LongStrip.astro"
 						<span id="emoji" class="block text-4xl sm:text-5xl lg:text-6xl mb-4">
 							👋
 						</span>
-						<h1 class="text-4xl sm:text-5xl lg:text-6xl font-semibold font-clash uppercase mb-2">
+						<h1 class="select-none text-4xl sm:text-5xl lg:text-6xl font-semibold font-clash uppercase mb-2">
 							Hello! I'm <span id="rica" class="styled-text border-2 sm:border-3 px-1 sm:px-3">Rica</span>,
 							<span class="block">A web developer based in <span id="ph" class="ph-text">Philippines</span>.</span>
 						</h1>
@@ -53,7 +53,7 @@ import LongStrip from "../components/LongStrip.astro"
     display: inline-block;
     background-color: #56ff00;
     border-color: #56ff00;
-    transition: all ease-in-out 300ms;
+    transition: all ease-in-out 200ms;
   }
   .styled-text:hover {
     transform: skew(-8deg, 0deg);
