refactor: remove semi-colons

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,5 +1,5 @@
 ---
-const { page } = Astro.props;
+const { page } = Astro.props
 const active = "font-bold text-black active:text-zinc-800 focus:text-zinc-900"
 const inactive = "text-zinc-600 hover:text-black active:text-zinc-800 focus:text-zinc-900"
 ---
