--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import NavBar from '../components/NavBar.astro';
-import Project from '../components/Project.astro';
+import Layout from '../layouts/Layout.astro'
+import NavBar from '../components/NavBar.astro'
+import Project from '../components/Project.astro'
 ---
 
 <Layout 
