--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,8 +1,8 @@
 ---
-import ExternalIcon from "./icons/External.astro";
-import GithubIcon from "./icons/Github.astro";
+import ExternalIcon from "./icons/External.astro"
+import GithubIcon from "./icons/Github.astro"
 
-const { img_file_name, progress, title, description, tools, url, url_text, github_url } = Astro.props;
+const { img_file_name, progress, title, description, tools, url, url_text, github_url } = Astro.props
 ---
 <section class="w-full md:w-6/12 mb-12 md:mb-6">
   <div class="bg-card drop-shadow-[5px_5px_#000] border-2 border-zinc-900 transition-colors p-5 md:mr-4 rounded-md">
