fix: fix and load new script

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,6 +35,7 @@ const fontshareUrl = "https://api.fontshare.com"
 	</head>
 	<body>
 		<slot />
+		<script src="../scripts/app.js"></script>
 		<script type="text/javascript">
 			console.log(`
 				┏━━━┓╋╋╋╋╋╋╋┏━┓╋╋┏┓
