--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -1,9 +1,9 @@
 ---
-import LinkedInIcon from './icons/LinkedIn.astro';
-import GithubIcon from './icons/Github.astro';
-import VSCOIcon from './icons/VSCO.astro';
-import DribbbleIcon from './icons/Dribbble.astro';
-import TwitchIcon from './icons/Twitch.astro';
+import LinkedInIcon from './icons/LinkedIn.astro'
+import GithubIcon from './icons/Github.astro'
+import VSCOIcon from './icons/VSCO.astro'
+import DribbbleIcon from './icons/Dribbble.astro'
+import TwitchIcon from './icons/Twitch.astro'
 ---
 <div class="flex justify-center align-center">
   <div class="link-bar">
