--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import LinkBar from '../components/LinkBar.astro';
-import NavBar from '../components/NavBar.astro';
+import Layout from '../layouts/Layout.astro'
+import LinkBar from '../components/LinkBar.astro'
+import NavBar from '../components/NavBar.astro'
 ---
 
 <Layout doIndex={true}>
