--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,5 +1,5 @@
 ---
-const { page } = Astro.props;
+const { page } = Astro.props
 ---
 <header class="flex justify-center font-satoshi font-medium text-sm sm:text-base">
   <div class="flex bg-zinc-800 rounded-b-lg">
