--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,6 +1,24 @@
 ---
 import ExternalIcon from "./icons/External.astro"
 import GithubIcon from "./icons/Github.astro"
+import ReactIcon from "./icons/tech/ReactIcon.astro"
+import NextIcon from "./icons/tech/NextIcon.astro"
+import TailwindIcon from "./icons/tech/TailwindIcon.astro"
+import VSCodeIcon from "./icons/tech/VSCodeIcon.astro"
+import SassIcon from "./icons/tech/SassIcon.astro"
+import TypescriptIcon from "./icons/tech/TypescriptIcon.astro"
+import ViteIcon from "./icons/tech/ViteIcon.astro"
+import HTMLIcon from "./icons/tech/HTMLIcon.astro"
+import CSSIcon from "./icons/tech/CSSIcon.astro"
+import JqueryIcon from "./icons/tech/JqueryIcon.astro"
+import JekyllIcon from "./icons/tech/JekyllIcon.astro"
+import NuxtIcon from "./icons/tech/NuxtIcon.astro"
+import DiscordAPIIcon from "./icons/tech/DiscordAPIIcon.astro"
+import TwitterAPIIcon from "./icons/tech/TwitterAPIIcon.astro"
+import NodeIcon from "./icons/tech/NodeIcon.astro"
+import StrapiIcon from "./icons/tech/StrapiIcon.astro"
+import NPMIcon from "./icons/tech/NPMIcon.astro"
+import SEOIcon from "./icons/tech/SEOIcon.astro"
 
 const { img_file_name, progress, title, description, tools, url, url_text, github_url } = Astro.props
 ---
@@ -22,8 +40,39 @@ const { img_file_name, progress, title, description, tools, url, url_text, githu
       </div>
 
       <div class="mt-1 mb-3">
-        {tools.map((tool: String, i) => {
-          return <span class="inline-block select-none py-1 mt-1 mr-1 text-zinc-800">{tool} {i !== (tools.length -1) && <span class="text-gray-200 px-3">/</span>}</span>
+        {tools.map((tool: {id: String, name: String}, i: Number) => {
+          return (
+            <span class="inline-flex items-center select-none">
+              <span class="mt-1">
+                {
+                  (tool.id === 'react') ? <ReactIcon /> :
+                  (tool.id === 'next') ? <NextIcon /> :
+                  (tool.id === 'strapi') ? <StrapiIcon /> :
+                  (tool.id === 'tailwind') ? <TailwindIcon /> :
+                  (tool.id === 'vscode') ? <VSCodeIcon /> :
+                  (tool.id === 'sass') ? <SassIcon /> :
+                  (tool.id === 'typescript') ? <TypescriptIcon /> :
+                  (tool.id === 'vite') ? <ViteIcon /> :
+                  (tool.id === 'html') ? <HTMLIcon /> :
+                  (tool.id === 'css') ? <CSSIcon /> :
+                  (tool.id === 'jquery') ? <JqueryIcon /> :
+                  (tool.id === 'jekyll') ? <JekyllIcon /> :
+                  (tool.id === 'nuxt') ? <NuxtIcon /> :
+                  (tool.id === 'vue') ? <VueIcon /> :
+                  (tool.id === 'discordapi') ? <DiscordAPIIcon /> :
+                  (tool.id === 'twitterapi') ? <TwitterAPIIcon /> :
+                  (tool.id === 'node') ? <NodeIcon /> :
+                  (tool.id === 'package') ? <NPMIcon /> :
+                  (tool.id === 'seo') ? <SEOIcon /> :
+                  null
+                }
+              </span>
+              <span class="py-1 mt-1 ml-2 mr-1 text-zinc-800 font-medium">
+                {tool.name}
+              </span>
+              {i !== (tools.length -1) && <span class="text-gray-300 pl-2 pr-3">&middot;</span>}
+            </span>
+          )
         })}
       </div>
 
