--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -2,6 +2,8 @@
 import Layout from '../layouts/Layout.astro'
 import NavBar from '../components/NavBar.astro'
 import Project from '../components/Project.astro'
+
+import ReactIcon from '../components/icons/tech/ReactIcon.astro'
 ---
 
 <Layout 
@@ -21,7 +23,12 @@ import Project from '../components/Project.astro'
           progress={{text: "[Pre-alpha] Full Stack Project", color: "text-lime-600"}}
           title="MyManhwaList"
           description="Manhwa reading lists exchange community"
-          tools={['Next.js', 'React', 'Strapi', 'Tailwind CSS']}
+          tools={[
+            {id: 'next', name: 'Next.js'},
+            {id: 'react', name: 'React'},
+            {id: 'strapi', name: 'Strapi'},
+            {id: 'tailwind', name: 'Tailwind CSS'}
+          ]}
           url="https://mymanhwalist-next.vercel.app"
           url_text="View project"
           github_url={null}
@@ -32,7 +39,10 @@ import Project from '../components/Project.astro'
           progress={{text: "Theme Design", color: "text-lime-600"}}
           title="Orangey"
           description="Warm dark theme for VSCode"
-          tools={['Visual Studio Code API', 'Package']}
+          tools={[
+            {id: 'vscode', name: 'Visual Studio Code API'},
+            {id: 'package', name: 'Package'},
+          ]}
           url="https://marketplace.visualstudio.com/items?itemName=ricafolio.orangey-vscode-theme"
           url_text="Download extension"
           github_url="https://github.com/ricafolio/orangey-vscode-theme"
@@ -43,7 +53,12 @@ import Project from '../components/Project.astro'
           progress={{text: "Front-end Project", color: "text-lime-600"}}
           title="CSS Box Transform Visualizer"
           description="Simple playground to quickly generate code for CSS3 Transforms"
-          tools={['React', 'SASS', 'Typescript', 'Vite']}
+          tools={[
+            {id: 'react', name: 'React'},
+            {id: 'sass', name: 'SASS'},
+            {id: 'typescript', name: 'Typescript'},
+            {id: 'vite', name: 'Vite'}
+          ]}
           url="https://box-transform-visualizer.vercel.app/"
           url_text="View project"
           github_url="https://github.com/ricafolio/box-transform-visualizer"
@@ -58,7 +73,12 @@ import Project from '../components/Project.astro'
           progress={{text: "Front-end Project", color: "text-lime-600"}}
           title="Chef"
           description="Responsive landing page for a chrome extension"
-          tools={['HTML', 'CSS', 'jQuery', 'Jekyll']}
+          tools={[
+            {id: 'html', name: 'HTML'},
+            {id: 'css', name: 'CSS'},
+            {id: 'jquery', name: 'jQuery'},
+            {id: 'jekyll', name: 'jekyll'}
+          ]}
           url="https://usechef.com/"
           url_text="View project"
           github_url={null}
@@ -69,7 +89,12 @@ import Project from '../components/Project.astro'
           progress={{text: "[Offline] Full Stack Project", color: "text-red-600"}}
           title="Wenmint.io"
           description="A community to keep track of upcoming NFT launch dates"
-          tools={['Nuxt.js', 'Vue.js', 'Strapi', 'Discord API', 'Twitter API', 'SEO']}
+          tools={[
+            {id: 'nuxt', name: 'Nuxt.js'},
+            {id: 'discordapi', name: 'Discord API'},
+            {id: 'twitterapi', name: 'Twitter API'},
+            {id: 'seo', name: 'SEO'},
+          ]}
           url="https://web.archive.org/web/20221207025634/https://wenmint.io/"
           url_text="View archived page"
           github_url={null}
@@ -80,7 +105,11 @@ import Project from '../components/Project.astro'
           progress={{text: "[Offline] Bot Project", color: "text-red-600"}}
           title="Premint Links Discord Bot"
           description="A bot used by over 300 discord servers that extracts the most recent premint links shared on Twitter."
-          tools={['Discord.js', 'Node.js', 'Twitter API']}
+          tools={[
+            {id: 'discordapi', name: 'Discord API'},
+            {id: 'twitterapi', name: 'Twitter API'},
+            {id: 'node', name: 'Node.js'},
+          ]}
           url="https://top.gg/bot/1006311461175443526"
           url_text="View archived page"
           github_url={null}
@@ -91,7 +120,11 @@ import Project from '../components/Project.astro'
           progress={{text: "[Offline] Full Stack Project", color: "text-red-600"}}
           title="NFT Referral"
           description="An alt-resistant referral campaign implemented for an NFT project, attracting 23,000 registrations in just three days."
-          tools={['Nuxt.js', 'Strapi', 'Twitter OAuth']}
+          tools={[
+            {id: 'nuxt', name: 'Nuxt.js'},
+            {id: 'strapi', name: 'Strapi'},
+            {id: 'twitterapi', name: 'Twitter OAuth'},
+          ]}
           url="https://twitter.com/search?q=cultofeth.xyz&src=typed_query&f=live"
           url_text="View campaign results"
           github_url={null}
