chore: fix font-weights with no effect

--- a/src/components/LongStrip.astro
+++ b/src/components/LongStrip.astro
@@ -6,7 +6,7 @@ const { amount } = Astro.props
   <div class="relative flex flex-col items-center">
     {
       [...Array(amount)].map((i) => (
-        <div class="afw inline-block uppercase font-semibold mb-2">
+        <div class="afw inline-block uppercase font-bold mb-2">
           <span class="inline-block mb-2">💼</span> Available for work
         </div>
       ))
