--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -35,7 +35,7 @@ const { img_file_name, progress, title, description, tools, url, url_text, githu
     <div class="flex flex-col justify-center">
       <div>
         {progress && <small class={`block text-sm mb-1 font-semibold uppercase ${progress.color}`}>{progress.text}</small>}
-        <h2 class="text-3xl font-medium font-clash">{title}</h2>
+        <h2 class="text-3xl font-clash">{title}</h2>
         <p class="text-lg text-black mt-1">{description}</p>
       </div>
 
@@ -67,7 +67,7 @@ const { img_file_name, progress, title, description, tools, url, url_text, githu
                   null
                 }
               </span>
-              <span class="py-1 mt-1 ml-2 mr-1 text-zinc-800 font-medium">
+              <span class="py-1 mt-1 ml-2 mr-1 text-zinc-800">
                 {tool.name}
               </span>
               {i !== (tools.length -1) && <span class="text-gray-300 pl-2 pr-3">&middot;</span>}
