fix: image without dimensions

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -28,7 +28,7 @@ const { img_file_name, progress, title, description, tools, url, url_text, githu
       <picture>
         <source type="image/webp" srcset={`/img/${img_file_name}.webp`} class="rounded-md">
         <source type="image/png" srcset={`/img/${img_file_name}.png`} class="rounded-md">
-        <img src={`/img/${img_file_name}.png`} alt={title} loading="lazy" class="rounded-md">
+        <img src={`/img/${img_file_name}.png`} alt={title} loading="lazy" width="564" height="288" class="rounded-md">
       </picture>
     </div>
 
