--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -19,6 +19,7 @@ import ReactIcon from '../components/icons/tech/ReactIcon.astro'
 				<h1 class="w-full text-3xl sm:text-4xl font-semibold font-clash mb-6 uppercase">Personal projects</h1>
 
         <Project
+          lazy={false}
           img_file_name="mml"
           progress={{text: "[Pre-alpha] Full Stack Project", color: "text-lime-600"}}
           title="MyManhwaList"
@@ -35,6 +36,7 @@ import ReactIcon from '../components/icons/tech/ReactIcon.astro'
         />
 
         <Project
+          lazy={false}
           img_file_name="orangey"
           progress={{text: "Theme Design", color: "text-lime-600"}}
           title="Orangey"
