--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -83,7 +83,7 @@ const { lazy = true, img_file_name, progress, title, description, tools, url, ur
             <ExternalIcon />
           </span>
         </a>
-        {github_url && <a href={github_url} target="_blank" class="ml-2 inline-block bg-black hover:bg-zinc-800 transition duration-300 rounded-full py-2 px-3">
+        {github_url && <a href={github_url} target="_blank" class="ml-2 inline-block bg-black hover:bg-zinc-800 transition duration-300 rounded-full py-2 px-3" aria-label="Github repository">
           <GithubIcon color="#fff" />
         </a>}
       </div>
