fix: renamed icon

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,6 +1,6 @@
 ---
-import ExternalIcon from "./icons/External.astro"
-import GithubIcon from "./icons/Github.astro"
+import ExternalIcon from "./icons/ExternalIcon.astro"
+import GithubIcon from "./icons/GithubIcon.astro"
 import ReactIcon from "./icons/tech/ReactIcon.astro"
 import NextIcon from "./icons/tech/NextIcon.astro"
 import TailwindIcon from "./icons/tech/TailwindIcon.astro"
