--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,11 @@ import LongStrip from "../components/LongStrip.astro"
 <Layout doIndex={true}>
   <div id="swup" class="container height-fix text-black">
 		<div class="height-fix-inner flex">
-			<div class="w-1/12 sm:w-[2rem] sm:flex-none bg-black">
+			<div class="hidden sm:block sm:w-[2rem] sm:flex-none bg-black">
 				<LongStrip amount={5} />
 			</div>
 
-			<div class="w-11/12 sm:flex-1 flex flex-col justify-between overflow-hidden">
+			<div class="w-full sm:flex-1 flex flex-col justify-between overflow-hidden">
 				<NavBar page="about" />
 
 				<main class="container mx-auto flex flex-col justify-evenly overflow-hidden">
