chore: add Google Places icon

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -20,6 +20,7 @@ import StrapiIcon from "./icons/tech/StrapiIcon.astro"
 import NPMIcon from "./icons/tech/NPMIcon.astro"
 import SEOIcon from "./icons/tech/SEOIcon.astro"
 import OpenAIIcon from "./icons/tech/OpenAIIcon.astro"
+import GooglePlacesIcon from "./icons/tech/GooglePlacesIcon.astro"
 
 const { lazy = true, img_file_name, progress, title, description, tools, url, url_text, github_url } = Astro.props
 ---
@@ -65,6 +66,7 @@ const { lazy = true, img_file_name, progress, title, description, tools, url, ur
                   (tool.id === 'package') ? <NPMIcon /> :
                   (tool.id === 'seo') ? <SEOIcon /> :
                   (tool.id === 'openaiapi') ? <OpenAIIcon /> :
+                  (tool.id === 'googleapi') ? <GooglePlacesIcon /> :
                   null
                 }
               </span>
