chore: add new project - "Destinasyon"

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -35,6 +35,21 @@ import Project from '../components/Project.astro'
 
         <Project
           lazy={false}
+          img_file_name="destinasyon"
+          progress={{text: "[PRE-ALPHA] Front-end Project", color: "text-lime-600"}}
+          title="Destinasyon"
+          description="Tool to discover the best travel destinations in the Philippines."
+          tools={[
+            {id: 'next', name: 'Next.js'},
+            {id: 'openaiapi', name: 'OpenAI API'},
+            {id: 'googleapi', name: 'Google Places API'},
+          ]}
+          url=""
+          url_text="View Project"
+          github_url="https://github.com/ricafolio/destinasyon-app"
+        />
+
+        <Project
           img_file_name="orangey"
           progress={{text: "Theme Design", color: "text-lime-600"}}
           title="Orangey"
