chore: add destinasyon link

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -44,7 +44,7 @@ import Project from '../components/Project.astro'
             {id: 'openaiapi', name: 'OpenAI API'},
             {id: 'googleapi', name: 'Google Places API'},
           ]}
-          url=""
+          url="https://main.d2e0gszt7hd9ri.amplifyapp.com/"
           url_text="View Project"
           github_url="https://github.com/ricafolio/destinasyon-app"
         />
