chore: add new icons

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -21,6 +21,8 @@ import NPMIcon from "./icons/tech/NPMIcon.astro"
 import SEOIcon from "./icons/tech/SEOIcon.astro"
 import OpenAIIcon from "./icons/tech/OpenAIIcon.astro"
 import GooglePlacesIcon from "./icons/tech/GooglePlacesIcon.astro"
+import ChromeIcon from "./icons/tech/ChromeIcon.astro"
+import JavascriptIcon from "./icons/tech/JavascriptIcon.astro"
 
 const { lazy = true, img_file_name, progress, title, description, tools, url, url_text, github_url } = Astro.props
 ---
@@ -67,6 +69,8 @@ const { lazy = true, img_file_name, progress, title, description, tools, url, ur
                   (tool.id === 'seo') ? <SEOIcon /> :
                   (tool.id === 'openaiapi') ? <OpenAIIcon /> :
                   (tool.id === 'googleapi') ? <GooglePlacesIcon /> :
+                  (tool.id === 'chromeapi') ? <ChromeIcon /> :
+                  (tool.id === 'javascript') ? <JavascriptIcon /> :
                   null
                 }
               </span>
