chore: change progress text

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -19,7 +19,7 @@ import Project from '../components/Project.astro'
         <Project
           lazy={false}
           img_file_name="mml"
-          progress={{text: "[Pre-alpha] Full Stack Project", color: "text-lime-600"}}
+          progress={{text: "[OFFLINE] Full Stack Project", color: "text-red-600"}}
           title="MyManhwaList"
           description="Manhwa reading lists exchange community"
           tools={[
@@ -36,7 +36,7 @@ import Project from '../components/Project.astro'
         <Project
           lazy={false}
           img_file_name="destinasyon"
-          progress={{text: "[PRE-ALPHA] Front-end Project", color: "text-lime-600"}}
+          progress={{text: "Full stack Project", color: "text-lime-600"}}
           title="Destinasyon"
           description="Tool to discover the best travel destinations in the Philippines."
           tools={[
@@ -51,7 +51,7 @@ import Project from '../components/Project.astro'
 
         <Project
           img_file_name="orangey"
-          progress={{text: "Theme Design", color: "text-lime-600"}}
+          progress={{text: "Extension Project", color: "text-lime-600"}}
           title="Orangey"
           description="Warm dark theme for VSCode"
           tools={[
@@ -67,7 +67,7 @@ import Project from '../components/Project.astro'
           img_file_name="hcs"
           progress={{text: "Extension Project", color: "text-lime-600"}}
           title="Hide ChatGPT Sidebar"
-          description="A lightweight browser extension to hide ChatGPT's sidebar."
+          description="A lightweight browser extension to hide ChatGPT's sidebar"
           tools={[
             {id: 'chromeapi', name: 'Chrome Extension API'},
             {id: 'javascript', name: 'Javascript'}
