refactor: rename progress props to label

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -24,7 +24,7 @@ import GooglePlacesIcon from "./icons/tech/GooglePlacesIcon.astro"
 import ChromeIcon from "./icons/tech/ChromeIcon.astro"
 import JavascriptIcon from "./icons/tech/JavascriptIcon.astro"
 
-const { lazy = true, img_file_name, progress, title, description, tools, url, url_text, github_url } = Astro.props
+const { lazy = true, img_file_name, label, title, description, tools, url, url_text, github_url } = Astro.props
 ---
 <section class="w-full md:w-6/12 mb-12 md:mb-6">
   <div class="bg-card drop-shadow-[5px_5px_#000] border-2 border-zinc-900 transition-colors p-5 md:mr-4 rounded-md">
@@ -38,7 +38,7 @@ const { lazy = true, img_file_name, progress, title, description, tools, url, ur
 
     <div class="flex flex-col justify-center">
       <div>
-        {progress && <small class={`block text-sm mb-1 font-semibold uppercase ${progress.color}`}>{progress.text}</small>}
+        {label && <small class={`block text-sm mb-1 font-semibold uppercase ${label.color}`}>{label.text}</small>}
         <h2 class="text-3xl font-clash">{title}</h2>
         <p class="text-lg text-black mt-1">{description}</p>
       </div>
