--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -19,7 +19,7 @@ import Project from '../components/Project.astro'
         <Project
           lazy={false}
           img_file_name="mml"
-          progress={{text: "[OFFLINE] Full Stack Project", color: "text-red-600"}}
+          label={{text: "[OFFLINE] Full Stack Project", color: "text-red-600"}}
           title="MyManhwaList"
           description="Manhwa reading lists exchange community"
           tools={[
@@ -36,7 +36,7 @@ import Project from '../components/Project.astro'
         <Project
           lazy={false}
           img_file_name="destinasyon"
-          progress={{text: "Full stack Project", color: "text-lime-600"}}
+          label={{text: "Full stack Project", color: "text-lime-600"}}
           title="Destinasyon"
           description="Tool to discover the best travel destinations in the Philippines."
           tools={[
@@ -51,7 +51,7 @@ import Project from '../components/Project.astro'
 
         <Project
           img_file_name="orangey"
-          progress={{text: "Extension Project", color: "text-lime-600"}}
+          label={{text: "Extension Project", color: "text-lime-600"}}
           title="Orangey"
           description="Warm dark theme for VSCode"
           tools={[
@@ -65,7 +65,7 @@ import Project from '../components/Project.astro'
 
         <Project
           img_file_name="hcs"
-          progress={{text: "Extension Project", color: "text-lime-600"}}
+          label={{text: "Extension Project", color: "text-lime-600"}}
           title="Hide ChatGPT Sidebar"
           description="A lightweight browser extension to hide ChatGPT's sidebar"
           tools={[
@@ -79,7 +79,7 @@ import Project from '../components/Project.astro'
 
         <Project
           img_file_name="cbtv"
-          progress={{text: "Front-end Project", color: "text-lime-600"}}
+          label={{text: "Front-end Project", color: "text-lime-600"}}
           title="CSS Box Transform Visualizer"
           description="Simple playground to quickly generate code for CSS3 Transforms"
           tools={[
@@ -99,7 +99,7 @@ import Project from '../components/Project.astro'
 
         <Project
           img_file_name="chef"
-          progress={{text: "Front-end Project", color: "text-lime-600"}}
+          label={{text: "Front-end Project", color: "text-lime-600"}}
           title="Chef"
           description="Responsive landing page for a chrome extension"
           tools={[
@@ -115,7 +115,7 @@ import Project from '../components/Project.astro'
 
         <Project
           img_file_name="wenmint"
-          progress={{text: "[Offline] Full Stack Project", color: "text-red-600"}}
+          label={{text: "[Offline] Full Stack Project", color: "text-red-600"}}
           title="Wenmint.io"
           description="A community to keep track of upcoming NFT launch dates"
           tools={[
@@ -131,7 +131,7 @@ import Project from '../components/Project.astro'
 
         <Project
           img_file_name="bot"
-          progress={{text: "[Offline] Bot Project", color: "text-red-600"}}
+          label={{text: "[Offline] Bot Project", color: "text-red-600"}}
           title="Premint Links Discord Bot"
           description="A bot used by over 300 discord servers that extracts the most recent premint links shared on Twitter."
           tools={[
@@ -146,7 +146,7 @@ import Project from '../components/Project.astro'
 
         <Project
           img_file_name="cult"
-          progress={{text: "[Offline] Full Stack Project", color: "text-red-600"}}
+          label={{text: "[Offline] Full Stack Project", color: "text-red-600"}}
           title="NFT Referral"
           description="An alt-resistant referral campaign implemented for an NFT project, attracting 23,000 registrations in just three days."
           tools={[
