chore: change text color

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -93,9 +93,8 @@ import Project from '../components/Project.astro'
         />
 
         <Project
-          lazy={false}
           img_file_name="mml"
-          label={{text: "[OFFLINE/PRE-ALPHA] Full Stack Project", color: "text-red-600"}}
+          label={{text: "[IN PROGRESS] Full Stack Project", color: "text-orange-500"}}
           title="MyManhwaList"
           description="Manhwa reading lists exchange community"
           tools={[
