refactor: move components to /project/ folder and update imports

--- a/src/components/project/Project.astro
+++ b/src/components/project/Project.astro
@@ -1,7 +1,7 @@
 ---
-import Tool from "./Tool.astro";
-import ExternalIcon from "./icons/ExternalIcon.astro"
-import GithubIcon from "./icons/GithubIcon.astro"
+import Tool from "./Tool.astro"
+import ExternalIcon from "../icons/ExternalIcon.astro"
+import GithubIcon from "../icons/GithubIcon.astro"
 
 const { lazy = true, img_file_name, label, title, description, tools, url, url_text, github_url } = Astro.props
 ---
