refactor: move Project link to a component

--- a/src/components/project/Project.astro
+++ b/src/components/project/Project.astro
@@ -1,8 +1,6 @@
 ---
 import Tool from "./Tool.astro"
-import ExternalIcon from "../icons/ExternalIcon.astro"
-import GithubIcon from "../icons/GithubIcon.astro"
-
+import ProjectLink from "./ProjectLink.astro";
 const { lazy = true, img_file_name, label, title, description, tools, url, url_text, github_url } = Astro.props
 ---
 <section class="w-full md:w-6/12 mb-12 md:mb-6">
@@ -36,15 +34,11 @@ const { lazy = true, img_file_name, label, title, description, tools, url, url_t
       </div>
 
       <div class="flex items-center">
-        <a href={url} target="_blank" rel="nofollow" class="inline-block font-bold text-white bg-black hover:bg-zinc-800 transition duration-300 rounded-full py-3 px-7">
-          <span class="flex items-center justify-center">
-            <span>{url_text}</span>
-            <ExternalIcon />
-          </span>
-        </a>
-        {github_url && <a href={github_url} target="_blank" class="ml-2 inline-block bg-black hover:bg-zinc-800 transition duration-300 rounded-full py-2 px-3" aria-label="Github repository">
-          <GithubIcon color="#fff" />
-        </a>}
+        <ProjectLink 
+          url={url} 
+          url_text={url_text} 
+          github_url={github_url}
+        />
       </div>
     </div>
   </div>
