--- a/src/components/project/Project.astro
+++ b/src/components/project/Project.astro
@@ -1,16 +1,19 @@
 ---
 import Tool from "./Tool.astro"
-import ProjectLink from "./ProjectLink.astro";
+import ProjectLink from "./ProjectLink.astro"
+import ProjectImage from "./ProjectImage.astro"
+
 const { lazy = true, img_file_name, label, title, description, tools, url, url_text, github_url } = Astro.props
 ---
+
 <section class="w-full md:w-6/12 mb-12 md:mb-6">
   <div class="bg-card drop-shadow-[5px_5px_#000] border-2 border-zinc-900 transition-colors p-5 md:mr-4 rounded-md">
     <div class="mb-5 bg-[#ececcf] rounded-md">
-      <picture>
-        <source type="image/webp" srcset={`/img/${img_file_name}.webp`} class="rounded-md">
-        <source type="image/png" srcset={`/img/${img_file_name}.png`} class="rounded-md">
-        <img src={`/img/${img_file_name}.png`} alt={title} loading={lazy ? "lazy" : null} width="564" height="288" class="rounded-md mx-auto">
-      </picture>
+      <ProjectImage
+        img_file_name={img_file_name}
+        title={title}
+        lazy={lazy}
+      />
     </div>
 
     <div class="flex flex-col justify-center">
