refactor: rename component to ProjectTool

--- a/src/components/project/Project.astro
+++ b/src/components/project/Project.astro
@@ -1,5 +1,5 @@
 ---
-import Tool from "./Tool.astro"
+import ProjectTool from "./ProjectTool.astro"
 import ProjectLink from "./ProjectLink.astro"
 import ProjectImage from "./ProjectImage.astro"
 import ProjectInfo from "./ProjectInfo.astro";
@@ -27,7 +27,7 @@ const { lazy = true, img_file_name, label, title, description, tools, url, url_t
       <div class="mt-1 mb-3">
         {tools.map((tool: {id: String, name: String}, i: Number) => {
           return (
-            <Tool 
+            <ProjectTool 
               tool_index={i}
               tool_id={tool.id}
               tool_name={tool.name}
