--- a/src/components/project/ProjectTool.astro
+++ b/src/components/project/ProjectTool.astro
@@ -1,12 +1,12 @@
 ---
-import ToolIcon from "./ToolIcon.astro"
+import ProjectToolIcon from "./ProjectToolIcon.astro"
 
 const { tool_id, tool_name, tool_index, tools_length } = Astro.props
 ---
 
 <span class="inline-flex items-center select-none">
   <span class="mt-1">
-    <ToolIcon tool_id={tool_id} />
+    <ProjectToolIcon tool_id={tool_id} />
   </span>
   <span class="py-1 mt-1 ml-2 mr-1 text-zinc-800">
     {tool_name}
